--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet'/>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="sweetalert2.min.css"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
